--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "devDependencies": {
     "prettier": "3.3.3",
     "stylelint": "^16.9.0",
-    "stylelint-config-standard": "^36.0.1"
+    "stylelint-config-recess-order": "^5.1.1",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-declaration-block-no-ignored-properties": "^2.8.0"
   }
 }
