--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -4,6 +4,7 @@
     "stylelint-declaration-block-no-ignored-properties",
     "stylelint-config-recess-order"
   ],
+  "plugins": ["stylelint-declaration-block-no-ignored-properties"],
   "rules": {
     "plugin/declaration-block-no-ignored-properties": true
   }
