Refactor stylelint configuration and makefile

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,9 +1,5 @@
 {
-  "extends": [
-    "stylelint-config-standard",
-    "stylelint-declaration-block-no-ignored-properties",
-    "stylelint-config-recess-order"
-  ],
+  "extends": ["stylelint-config-standard", "stylelint-config-recess-order"],
   "plugins": ["stylelint-declaration-block-no-ignored-properties"],
   "rules": {
     "plugin/declaration-block-no-ignored-properties": true
