Refactor stylelint configuration and makefile, update CSS settings, and add null rule for no-descending-specificity

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,6 +3,7 @@
   "plugins": ["stylelint-declaration-block-no-ignored-properties"],
   "rules": {
     "plugin/declaration-block-no-ignored-properties": true,
-    "selector-class-pattern": "^[a-z][a-zA-Z0-9-]+$"
+    "selector-class-pattern": "^[a-z][a-zA-Z0-9-]+$",
+    "no-descending-specificity": null
   }
 }
