--- a/nextjs_samples/my-app/package.json
+++ b/nextjs_samples/my-app/package.json
@@ -12,9 +12,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "immer": "^10.1.1",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
