--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -4,6 +4,12 @@
   "rules": {
     "plugin/declaration-block-no-ignored-properties": true,
     "selector-class-pattern": "^[a-z][a-zA-Z0-9-]+$",
-    "no-descending-specificity": null
+    "no-descending-specificity": null,
+    "at-rule-no-unknown": [
+      true,
+      {
+        "ignoreAtRules": ["tailwind", "layer", "apply"]
+      }
+    ]
   }
 }
