--- a/vite_tailwind_samples/my-react-app/tsconfig.json
+++ b/vite_tailwind_samples/my-react-app/tsconfig.json
@@ -3,5 +3,12 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  "compilerOptions": {
+    // chadcn/ui
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  }
 }
