--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint-config-prettier": "^9.1.0",
     "prettier": "3.3.3",
     "stylelint": "^16.9.0",
     "stylelint-config-recess-order": "^5.1.1",
