--- a/vite_tailwind_samples/my-react-app/package.json
+++ b/vite_tailwind_samples/my-react-app/package.json
@@ -18,8 +18,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "3.1.4",
+    "react-router-dom": "^7.0.1",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
