--- a/vite_tailwind_samples/my-react-app/package.json
+++ b/vite_tailwind_samples/my-react-app/package.json
@@ -23,11 +23,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "i18next": "^23.16.5",
+    "i18next-browser-languagedetector": "^8.0.0",
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "3.1.4",
     "react-router-dom": "^7.0.1",
+    "react-i18next": "^15.1.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "tiny-invariant": "^1.3.3",
