--- a/vite_tailwind_samples/my-react-app/package.json
+++ b/vite_tailwind_samples/my-react-app/package.json
@@ -29,8 +29,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "3.1.4",
-    "react-router-dom": "^7.0.1",
     "react-i18next": "^15.1.1",
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.0.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "tiny-invariant": "^1.3.3",
