--- a/vite_tailwind_samples/my-react-app/package.json
+++ b/vite_tailwind_samples/my-react-app/package.json
@@ -27,6 +27,7 @@
     "i18next": "^23.16.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "lucide-react": "^0.453.0",
+    "mermaid": "^11.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "3.1.4",
